[project]
name = "insurance-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "html5lib>=1.1",
    "lxml>=5.4.0",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pinecone>=7.0.2",
    "pinecone-client>=6.0.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "requests>=2.32.4",
    "streamlit>=1.45.1",
    "uuid>=1.30",
]
